apps/console/overlays/qa/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console
  annotations:
    alb.ingress.kubernetes.io/group.name: qa-external
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:495947449196:certificate/4a3a93b7-6a07-43f5-8d82-13ecd28be75e
    alb.ingress.kubernetes.io/load-balancer-name: qa-eks-external-alb
    external-dns.alpha.kubernetes.io/hostname: qa-eks-console.purpleray.com
    external-dns.alpha.kubernetes.io/ttl: "300"

spec:
  ingressClassName: alb
  rules:
  - host: qa-eks-console.purpleray.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 8010
